fixed text cropping

--- a/assets/styles/common/_typo.scss
+++ b/assets/styles/common/_typo.scss
@@ -61,7 +61,7 @@
   @include media-breakpoint-up(lg) {
     font-size: 62px;
     line-height: 56px;
-    letter-spacing: -2.37px;
+    letter-spacing: -1px;
   }
 
   @include media-breakpoint-only(md) {
